More header alignment and spacing fixes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,7 +52,7 @@
  }
 
  #body {
-   padding-top: 10vh;
+   padding-top: 7rem;
    min-height: 100vh;
    margin-bottom: auto;
    padding-left: 2vw;
